--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -11,30 +11,21 @@
 
   <div class="p-6">
     <h1 class="text-4xl font-bold text-pink-600">Wind Breaker Season 1</h1>
-    <p class="text-gray-400 mb-6">Wind Breaker Season 1 - All Episodes</p>
+    <p class="text-gray-400 mb-6">Wind Breaker Season 1</p>
 
     <!-- Video Player -->
     <div class="mb-4">
-      <iframe id="videoPlayer" width="100%" height="400" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="rounded shadow"></iframe>
+      <iframe id="videoPlayer" src="https://www.youtube.com/embed/ne0Y0vyjxpE" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Select an episode to play</h2>
-        <p id="episodeDesc" class="text-gray-400">Choose from the list of episodes below.</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: Not Available</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">Wind Breaker S01</h2>
+        <p id="episodeDesc" class="text-gray-400">Wind Breaker S01</p>
+        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-27</p>
+        <p class="text-gray-500 text-xs mt-2">Note: After clicking an episode, you may see up to 2 ads before your episode starts playing. Thanks for supporting us!</p>
       </div>
     </div>
 
     <!-- Episode List -->
-    <div id="episodeList" class="space-y-3 mb-6"></div>
-
-    <!-- Support Us Link -->
-    <div class="mt-6 text-center">
-      <a href="support.html" class="text-pink-600 hover:underline text-xl">Support Us</a>
-    </div>
-
-    <!-- Muse Asia Thanks Section -->
-    <div class="mt-6 text-center text-gray-400">
-      <p>Special thanks to <strong>Muse India/Asia</strong> for providing the official content. All rights to the anime belong to its respective owners.</p>
-    </div>
+    <div id="episodeList" class="space-y-3"></div>
   </div>
 
   <script type="text/javascript">
@@ -45,79 +36,79 @@
     const episodes = [
       {
         title: "Wind Breaker Season 1 Episode 1",
-        link: "https://youtu.be/ne0Y0vyjxpE?si=Jh2XBsFygn2-CDEB",
+        link: "https://www.youtube.com/embed/ne0Y0vyjxpE",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 2",
-        link: "https://youtu.be/J2568cnOa1g?si=jp_ZNl8OPNudRRKc",
+        link: "https://www.youtube.com/embed/J2568cnOa1g",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 3",
-        link: "https://youtu.be/QOMv17IjJAU?si=kiiOcN9SukZ8IjF_",
+        link: "https://www.youtube.com/embed/QOMv17IjJAU",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 4",
-        link: "https://youtu.be/MT7WzTJZCxg?si=pNnTOybcpnB5X17n",
+        link: "https://www.youtube.com/embed/MT7WzTJZCxg",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 5",
-        link: "https://youtu.be/4sRfndp1vAM?si=qKzd9rY8k_FW_X4r",
+        link: "https://www.youtube.com/embed/4sRfndp1vAM",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 6",
-        link: "https://youtu.be/oTvQ-5BNC6w?si=IN89kqr0nXCdBUpc",
+        link: "https://www.youtube.com/embed/oTvQ-5BNC6w",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 7",
-        link: "https://youtu.be/Em5lFIz_kxU?si=u5vZlfvPY4Yvj2Ss",
+        link: "https://www.youtube.com/embed/Em5lFIz_kxU",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 8",
-        link: "https://youtu.be/SBaGblvd4mU?si=c1pBS8u7SqPE_5V4",
+        link: "https://www.youtube.com/embed/SBaGblvd4mU",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 9",
-        link: "https://youtu.be/43Hj2GySjgA?si=fMUC_6l8pfvZ5W1-",
+        link: "https://www.youtube.com/embed/43Hj2GySjgA",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 10",
-        link: "https://youtu.be/TIpodnZtFP4?si=zROoRvVLuxi1R2qi",
+        link: "https://www.youtube.com/embed/TIpodnZtFP4",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 11",
-        link: "https://youtu.be/_L-UG_jvnM4?si=mDE3ByznSoUDpul0",
+        link: "https://www.youtube.com/embed/_L-UG_jvnM4",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 12",
-        link: "https://youtu.be/skAwsc6UL8A?si=7Ak1C8Wsb6nGwpzB",
+        link: "https://www.youtube.com/embed/skAwsc6UL8A",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 13",
-        link: "https://youtu.be/-xUk9E2iQQY?si=yiPWyVEvoqM8YpIH",
+        link: "https://www.youtube.com/embed/-xUk9E2iQQY",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       }
