--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -4,137 +4,122 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wind Breaker Season 1</title>
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google Font: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+    /* disable text selection */
+    body, html {
+      user-select: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      touch-action: manipulation;
+    }
+  </style>
 </head>
 
-<body class="bg-black text-white font-mono">
+<body class="bg-gradient-to-b from-gray-900 via-black to-gray-900 text-gray-100" oncontextmenu="return false;">
+  <div class="max-w-4xl mx-auto p-6 space-y-6">
 
-  <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Wind Breaker Season 1</h1>
-    <p class="text-gray-400 mb-6">Wind Breaker Season 1</p>
-
-    <!-- Video Player -->
-    <div class="mb-4">
-      <iframe id="videoPlayer" src="https://www.youtube.com/embed/ne0Y0vyjxpE" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Wind Breaker S01</h2>
-        <p id="episodeDesc" class="text-gray-400">Wind Breaker S01</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-27</p>
-        <p class="text-gray-500 text-xs mt-2">Note: After clicking an episode, you may see up to 2 ads before your episode starts playing. Thanks for supporting us!</p>
+    <!-- Header with Go Back & Support Us -->
+    <header class="flex items-center justify-between">
+      <h1 class="text-4xl font-bold text-pink-500">Wind Breaker Season 1</h1>
+      <div class="space-x-4">
+        <a href="index.2.html" class="px-4 py-2 bg-pink-600 hover:bg-pink-700 rounded shadow transition">← Go Back</a>
+        <a href="support.html" class="px-4 py-2 bg-gray-700 hover:bg-gray-600 rounded shadow transition">💖 Support Us</a>
       </div>
+    </header>
+
+    <!-- Video Player Card -->
+    <div class="relative bg-gray-800 rounded-lg shadow-lg overflow-hidden" style="padding-bottom:56.25%; height:0;">
+      <!-- Loader Overlay -->
+      <div id="loader" class="absolute inset-0 bg-black bg-opacity-75 flex items-center justify-center z-20 text-pink-400 text-lg font-semibold hidden">
+        Ad playing… Skip in <span id="countdown">5</span>s
+      </div>
+      <!-- YouTube iframe -->
+      <iframe
+        id="videoPlayer"
+        class="absolute top-0 left-0 w-full h-full"
+        src="https://www.youtube.com/embed/ne0Y0vyjxpE?rel=0&modestbranding=1"
+        frameborder="0"
+        allow="autoplay; encrypted-media"
+        allowfullscreen>
+      </iframe>
+      <!-- Click-block overlay top-right -->
+      <div class="absolute top-0 right-0 w-16 h-16 z-30"></div>
+    </div>
+
+    <!-- Episode Metadata -->
+    <div class="bg-gray-800 p-4 rounded-b-lg shadow-inner space-y-1">
+      <h2 id="episodeTitle" class="text-xl font-semibold">Select an episode</h2>
+      <p id="episodeDesc" class="text-gray-400 text-sm">Click any episode below to start watching.</p>
+      <p id="uploadDate" class="text-gray-500 text-xs">Uploaded: —</p>
     </div>
 
     <!-- Episode List -->
-    <div id="episodeList" class="space-y-3"></div>
+    <div id="episodeList" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
+
   </div>
 
-  <script type="text/javascript">
-    // Remove "leave site?" prompts
-    window.onbeforeunload = null;
+  <script>
+    // disable right-click & long-press
+    document.addEventListener('contextmenu', e => e.preventDefault());
+    document.addEventListener('mousedown', e => e.preventDefault());
+    document.addEventListener('touchstart', e => e.preventDefault());
 
-    // Episodes loading
     const episodes = [
-      {
-        title: "Wind Breaker Season 1 Episode 1",
-        link: "https://www.youtube.com/embed/ne0Y0vyjxpE",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 2",
-        link: "https://www.youtube.com/embed/J2568cnOa1g",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 3",
-        link: "https://www.youtube.com/embed/QOMv17IjJAU",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 4",
-        link: "https://www.youtube.com/embed/MT7WzTJZCxg",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 5",
-        link: "https://www.youtube.com/embed/4sRfndp1vAM",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 6",
-        link: "https://www.youtube.com/embed/oTvQ-5BNC6w",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 7",
-        link: "https://www.youtube.com/embed/Em5lFIz_kxU",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 8",
-        link: "https://www.youtube.com/embed/SBaGblvd4mU",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 9",
-        link: "https://www.youtube.com/embed/43Hj2GySjgA",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 10",
-        link: "https://www.youtube.com/embed/TIpodnZtFP4",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 11",
-        link: "https://www.youtube.com/embed/_L-UG_jvnM4",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 12",
-        link: "https://www.youtube.com/embed/skAwsc6UL8A",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Wind Breaker Season 1 Episode 13",
-        link: "https://www.youtube.com/embed/-xUk9E2iQQY",
-        description: "Wind Breaker Season 1",
-        uploadDate: "2025-04-25"
-      }
+      { title: "Episode 1", link: "https://www.youtube.com/embed/ne0Y0vyjxpE", date:"2025-04-25" },
+      { title: "Episode 2", link: "https://www.youtube.com/embed/J2568cnOa1g", date:"2025-04-25" },
+      { title: "Episode 3", link: "https://www.youtube.com/embed/QOMv17IjJAU", date:"2025-04-25" },
+      { title: "Episode 4", link: "https://www.youtube.com/embed/MT7WzTJZCxg", date:"2025-04-25" },
+      { title: "Episode 5", link: "https://www.youtube.com/embed/4sRfndp1vAM", date:"2025-04-25" },
+      { title: "Episode 6", link: "https://www.youtube.com/embed/oTvQ-5BNC6w", date:"2025-04-25" },
+      { title: "Episode 7", link: "https://www.youtube.com/embed/Em5lFIz_kxU", date:"2025-04-25" },
+      { title: "Episode 8", link: "https://www.youtube.com/embed/SBaGblvd4mU", date:"2025-04-25" },
+      { title: "Episode 9", link: "https://www.youtube.com/embed/43Hj2GySjgA", date:"2025-04-25" },
+      { title: "Episode 10", link: "https://www.youtube.com/embed/TIpodnZtFP4", date:"2025-04-25" },
+      { title: "Episode 11", link: "https://www.youtube.com/embed/_L-UG_jvnM4", date:"2025-04-25" },
+      { title: "Episode 12", link: "https://www.youtube.com/embed/skAwsc6UL8A", date:"2025-04-25" },
+      { title: "Episode 13", link: "https://www.youtube.com/embed/-xUk9E2iQQY", date:"2025-04-25" }
     ];
 
     const list = document.getElementById('episodeList');
     const player = document.getElementById('videoPlayer');
     const title = document.getElementById('episodeTitle');
-    const desc = document.getElementById('episodeDesc');
-    const date = document.getElementById('uploadDate');
+    const desc  = document.getElementById('episodeDesc');
+    const date  = document.getElementById('uploadDate');
+    const loader = document.getElementById('loader');
+    const countdown = document.getElementById('countdown');
 
-    episodes.forEach((ep) => {
+    episodes.forEach(ep => {
       const btn = document.createElement('button');
-      btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
-      btn.innerText = ep.title;
-
+      btn.className = 'flex items-center space-x-3 p-3 bg-gray-700 hover:bg-pink-600 transition rounded shadow';
+      btn.innerHTML = '<span class="text-pink-400 text-lg">▶</span><span class="flex-1 text-left">' + ep.title + '</span>';
       btn.onclick = () => {
-        player.src = ep.link;
-        title.innerText = ep.title;
-        desc.innerText = ep.description;
-        date.innerText = "Uploaded: " + ep.uploadDate;
+        // show loader & countdown
+        loader.classList.remove('hidden');
+        let sec = 5;
+        countdown.textContent = sec;
+        const iv = setInterval(() => {
+          sec--;
+          countdown.textContent = sec;
+          if (sec <= 0) {
+            clearInterval(iv);
+            loader.classList.add('hidden');
+            player.src = ep.link + '?autoplay=1&rel=0&modestbranding=1';
+            title.textContent = ep.title;
+            desc.textContent = 'Wind Breaker Season 1 — ' + ep.title;
+            date.textContent = 'Uploaded: ' + ep.date;
+          }
+        }, 1000);
       };
-
       list.appendChild(btn);
     });
   </script>
-
 </body>
 </html>
