--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -12,90 +12,67 @@
     html, body {
       user-select: none;
     }
-    iframe {
-      pointer-events: auto !important;
+    .untouchable {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+    }
+    .fullscreen-container.fullscreen {
+      position: fixed !important;
+      top: 0 !important;
+      left: 0 !important;
+      width: 100vw !important;
+      height: 100vh !important;
+      z-index: 9999 !important;
     }
   </style>
 </head>
 <body class="bg-gradient-to-b from-purple-950 via-gray-900 to-purple-950 text-gray-100 min-h-screen" oncontextmenu="return false;">
-  <div class="max-w-4xl mx-auto p-6 space-y-6"><!-- Header -->
-<header class="flex flex-col sm:flex-row sm:items-center justify-between space-y-2 sm:space-y-0">
-  <h1 class="text-4xl font-bold text-purple-300">Wind Breaker Season 1</h1>
-  <div class="flex space-x-3">
-    <a href="index.2.html" class="px-4 py-2 bg-purple-700 hover:bg-purple-800 text-white rounded-xl shadow transition-all duration-300">← Go Back</a>
-    <a href="support.html" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-xl shadow transition-all duration-300">💖 Support Us</a>
-  </div>
-</header>
-
-<!-- Video Player -->
-<div class="relative bg-gray-800 rounded-lg shadow-lg overflow-hidden aspect-video">
+  <div class="max-w-4xl mx-auto p-6 space-y-6">
+    <header class="flex flex-col sm:flex-row sm:items-center justify-between space-y-2 sm:space-y-0">
+      <h1 class="text-4xl font-bold text-purple-300">Wind Breaker Season 1</h1>
+      <div class="flex space-x-3">
+        <a href="index.2.html" class="px-4 py-2 bg-purple-700 hover:bg-purple-800 text-white rounded-xl shadow transition-all duration-300">← Go Back</a>
+        <a href="support.html" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-xl shadow transition-all duration-300">💖 Support Us</a>
+      </div>
+    </header><!-- Video Player -->
+<div id="videoContainer" class="relative bg-gray-800 rounded-lg shadow-lg overflow-hidden aspect-video fullscreen-container">
   <iframe
     id="videoPlayer"
-    class="w-full h-full z-10 relative"
+    class="w-full h-full"
     src="https://www.youtube.com/embed/ne0Y0vyjxpE?rel=0&modestbranding=1&autoplay=0&controls=1&fs=1"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"
     allowfullscreen>
   </iframe>
-  <!-- Overlay on logo area -->
-  <div
-    id="ytLogoBlock"
-    class="absolute bottom-0 left-0 w-full h-10 z-30"
-    style="cursor:pointer;">
-  </div>
+  <div class="untouchable" onclick="triggerPopunder()"></div>
 </div>
 
-<!-- Description BELOW video player -->
 <div id="animeDesc" class="bg-purple-800 bg-opacity-30 p-4 rounded-lg text-sm shadow transition duration-500">
-  Loading anime description...
+  <h3 class="text-lg font-semibold mb-1">About Wind Breaker</h3>
+  <p>Haruka Sakura joins the feared Furin High, only to discover its delinquents protect their town. With intense fights and emotional growth, Wind Breaker balances action with heart.</p>
 </div>
 
-<!-- Episode Metadata -->
 <div class="bg-purple-900 p-4 rounded-lg shadow-inner space-y-1">
   <h2 id="episodeTitle" class="text-xl font-semibold text-purple-300">Select an episode</h2>
   <p id="episodeDesc" class="text-gray-300 text-sm">Click any episode below to start watching.</p>
   <p id="uploadDate" class="text-gray-400 text-xs">Uploaded: —</p>
 </div>
 
-<!-- Episode List -->
 <div id="episodeList" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
 
-<!-- Special Thanks -->
 <footer class="mt-12 text-center text-sm text-gray-400 border-t border-purple-700 pt-6">
-  <p>
-    Special thanks to the original creators, production studios, and copyright holders of <strong>Wind Breaker</strong> 
-    for their outstanding work and dedication to storytelling, animation, and artistry.
-  </p>
-  <p class="mt-2 italic">
-    All video content embedded on this site is property of their respective owners and is presented here for entertainment purposes only.
-  </p>
+  <p>Special thanks to the original creators, production studios, and copyright holders of <strong>Wind Breaker</strong> for their outstanding work and dedication to storytelling, animation, and artistry.</p>
+  <p class="mt-2 italic">All video content embedded on this site is property of their respective owners and is presented here for entertainment purposes only.</p>
   <p class="mt-1 text-purple-500 font-semibold">Support the official release whenever possible.</p>
 </footer>
 
   </div>  <script>
-    // Prevent right-click
     document.addEventListener('contextmenu', e => e.preventDefault());
 
-    // Add click popunder ad script on logo area only
-    document.getElementById('ytLogoBlock').addEventListener('click', function () {
-      (function(s,u,z,p){
-        s.src = u;
-        s.setAttribute('data-zone', z);
-        (p || document.body || document.documentElement).appendChild(s);
-      })(document.createElement('script'), 'https://shebudriftaiter.net/tag.min.js', 9277886);
-    });
-
-    // Description content
-    const animeDesc = `
-      <h3 class="text-lg font-semibold mb-1">About Wind Breaker</h3>
-      <p>
-        Haruka Sakura joins the feared Furin High, only to discover its delinquents protect their town.
-        With intense fights and emotional growth, Wind Breaker balances action with heart.
-      </p>
-    `;
-    document.getElementById("animeDesc").innerHTML = animeDesc;
-
-    // Episodes
     const episodes = [
       { title: "Episode 1", link: "https://www.youtube.com/embed/ne0Y0vyjxpE", date:"2025-04-25" },
       { title: "Episode 2", link: "https://www.youtube.com/embed/J2568cnOa1g", date:"2025-04-25" },
@@ -130,5 +107,16 @@
       };
       list.appendChild(btn);
     });
-  </script></body>
+
+    // Fullscreen overlay support
+    document.addEventListener('fullscreenchange', () => {
+      const container = document.getElementById('videoContainer');
+      container.classList.toggle('fullscreen', !!document.fullscreenElement);
+    });
+
+    // Popunder Trigger
+    function triggerPopunder() {
+      window.open('https://example.com/popunder', '_blank');
+    }
+  </script>  <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body||document.documentElement)</script></body>
 </html>
